--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-group-css-media-queries": "^1.2.2",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
     "gulp-uglifycss": "^1.1.0",
     "include-media": "^1.4.10",
     "merge-stream": "^2.0.0",
